...
      ),
    );
    return LayoutBuilder(
      builder: (context, constraints) {
        return DropdownMenu<TransitNetwork?>(
          enabled: asyncNetworks.hasValue,
          label: const Text('Location'),
          leadingIcon: const Icon(Icons.location_city),
          inputDecorationTheme: InputDecorationTheme(
            filled: true,
            fillColor: Theme.of(context).colorScheme.secondaryContainer,
            contentPadding: const EdgeInsets.symmetric(vertical: 5),
            border: const UnderlineInputBorder(
...
