...
      return ListTile(
        onTap: handlePress,
        leading: const Icon(Icons.location_city_rounded),
        title: Text(network.name),
        trailing: TextButton(
          onPressed: handlePress,
          child: const Text('Change'),
        ),
      );
    }
    if (currentNetworkAsync.hasValue) {
      return ListTile(
        onTap: handlePress,
...
